--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Codeforeces Custom Ranklist</title>
+    <title>Codeforces Custom Ranklist</title>
 
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
 
